Task[PCOMP432]: Import and initialize t-SNE

--- a/[COMP432]_Corolectal_Cancer_Neural_Network.ipynb
+++ b/[COMP432]_Corolectal_Cancer_Neural_Network.ipynb
@@ -17,8 +17,11 @@
     "import torch\n",
     "from torchvision.models import resnet50\n",
     "from torch.optim import SGD, Adam, RMSprop\n",
+    "from sklearn.manifold import TSNE\n",
     "\n",
     "print(f\"torch.cuda.is_available(): {torch.cuda.is_available()}\")\n",
+    "\n",
+    "torch.manual_seed(0)\n",
     "\n",
     "device = \"cuda:0\"\n",
     "\n",
@@ -88,7 +91,10 @@
     "                  weight_decay=l2_regularizer,\n",
     "                  alpha=rmsprop_decay_rate,\n",
     "                  eps=epsilon_division_stablizer,\n",
-    "                  differentiable=True)"
+    "                  differentiable=True)\n",
+    "\n",
+    "# [Task 1]: Import and initialize the t-SNE visualization algorithm\n",
+    "tsne = TSNE(random_state=42)"
    ]
   }
  ],
