--- a/[COMP432]_Corolectal_Cancer_Neural_Network.ipynb
+++ b/[COMP432]_Corolectal_Cancer_Neural_Network.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -18,6 +18,7 @@
     "from torchvision.models import resnet50\n",
     "from torch.optim import SGD, Adam, RMSprop\n",
     "from sklearn.manifold import TSNE\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "print(f\"torch.cuda.is_available(): {torch.cuda.is_available()}\")\n",
     "\n",
