Task[PCOMP432]: Change last layer of the ResNet model for classes

--- a/[COMP432]_Corolectal_Cancer_Neural_Network.ipynb
+++ b/[COMP432]_Corolectal_Cancer_Neural_Network.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -28,6 +28,17 @@
     "\n",
     "# [Task 1]: Import and initialize ResNet50\n",
     "resnet_corolectal_cancer_model = resnet50(weights=None)\n",
+    "'''\n",
+    "Note that by default the ResNet implementations from PyTorch's source code follow the ImaegNet fully connected layer specification of 2048x1000.\n",
+    "    Therefore, for our project, we need to change it to use 3 classes according to the first dataset (MUS, NORM, STR).\n",
+    "    See the source code for the base class here (https://github.com/pytorch/vision/blob/main/torchvision/models/resnet.py).\n",
+    "    Stack Overflow post here (https://stackoverflow.com/questions/68980724/the-number-of-classes-in-pytorch-pretrained-model).\n",
+    "\n",
+    "    Additionally, we will need to remove the last layer to be able to pass the features to a different learning algorithm in task 2.\n",
+    "    Here is a Stack Overflow post about it (https://stackoverflow.com/questions/52548174/how-to-remove-the-last-fc-layer-from-a-resnet-model-in-pytorch).\n",
+    "\n",
+    "'''\n",
+    "resnet_corolectal_cancer_model.fc = torch.nn.Linear(2048, 3)\n",
     "resnet_corolectal_cancer_model.to(device=device)\n",
     "resnet_corolectal_cancer_model.train()\n",
     "\n",
