--- a/[COMP432]_Corolectal_Cancer_Neural_Network.ipynb
+++ b/[COMP432]_Corolectal_Cancer_Neural_Network.ipynb
@@ -1,134 +1,213 @@
 {
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
+  "cells": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.cuda.is_available(): True\n"
-     ]
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uH3QudoHyrpM",
+        "outputId": "07bbc2ee-d7a7-4e06-90d0-c9d11d4beee2"
+      },
+      "outputs": [],
+      "source": [
+        "import numpy \n",
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "from torchvision.models import resnet50\n",
+        "from torch.optim import SGD, Adam, RMSprop\n",
+        "from sklearn.manifold import TSNE\n",
+        "import matplotlib.pyplot as plt\n",
+        "from torchvision import datasets, transforms\n",
+        "from torch.utils.data import DataLoader, random_split\n",
+        "from PIL import Image\n",
+        "print(f\"torch.cuda.is_available(): {torch.cuda.is_available()}\")\n",
+        "\n",
+        "torch.manual_seed(0)\n",
+        "\n",
+        "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
+        "\n",
+        "# [Task 1]: Import and initialize ResNet50\n",
+        "resnet_corolectal_cancer_model = resnet50(weights=None)\n",
+        "'''\n",
+        "Note that by default the ResNet implementations from PyTorch's source code follow the ImaegNet fully connected layer specification of 2048x1000.\n",
+        "    Therefore, for our project, we need to change it to use 3 classes according to the first dataset (MUS, NORM, STR).\n",
+        "    See the source code for the base class here (https://github.com/pytorch/vision/blob/main/torchvision/models/resnet.py).\n",
+        "    Stack Overflow post here (https://stackoverflow.com/questions/68980724/the-number-of-classes-in-pytorch-pretrained-model).\n",
+        "\n",
+        "    Additionally, we will need to remove the last layer to be able to pass the features to a different learning algorithm in task 2.\n",
+        "    Here is a Stack Overflow post about it (https://stackoverflow.com/questions/52548174/how-to-remove-the-last-fc-layer-from-a-resnet-model-in-pytorch).\n",
+        "\n",
+        "'''\n",
+        "resnet_corolectal_cancer_model.fc = torch.nn.Linear(2048, 3)\n",
+        "resnet_corolectal_cancer_model.to(device=device)\n",
+        "resnet_corolectal_cancer_model.train()\n",
+        "\n",
+        "# [Task 1]: Import and initialize the optimizer algorithms\n",
+        "'''\n",
+        "Hyperparameters for vanilla SGD recommended settings: learning rate = 0.001\n",
+        "                                                      L2 regularizer penalty = 1e-6\n",
+        "                                                      Batch Size = 100\n",
+        "'''\n",
+        "learning_rate = 0.001\n",
+        "l2_regularizer = 1e-6\n",
+        "batch_size = 100\n",
+        "\n",
+        "sgd_no_momentum = SGD(resnet_corolectal_cancer_model.parameters(), lr=learning_rate, weight_decay=l2_regularizer, differentiable=True)\n",
+        "\n",
+        "'''\n",
+        "Hyperparameters for SGD + momentum recommended settings: learning rate = 0.001\n",
+        "                                                         L2 regularizer penalty = 1e-6\n",
+        "                                                         Batch Size = 100\n",
+        "                                                         Momentum = 0.9\n",
+        "                                                         Nesterov = true\n",
+        "'''\n",
+        "sgd_momentum = 0.9\n",
+        "sgd_momentum_use_nesterov = True\n",
+        "\n",
+        "sgd_momentum = SGD(resnet_corolectal_cancer_model.parameters(),\n",
+        "                   lr=learning_rate,\n",
+        "                   weight_decay=l2_regularizer,\n",
+        "                   momentum=sgd_momentum,\n",
+        "                   nesterov=sgd_momentum_use_nesterov,\n",
+        "                   differentiable=True)\n",
+        "\n",
+        "'''\n",
+        "Hyperparameters for Adam recommended settings: learning rate = 0.001\n",
+        "                                               L2 regularizer penalty = 1e-6\n",
+        "                                               Batch Size = 100\n",
+        "                                               Beta 1 (Momentum) = 0.9\n",
+        "                                               Beta 2 (RMS decay rate) = 0.999\n",
+        "                                               Division stablizer = 1e-8\n",
+        "'''\n",
+        "adam_betas = (0.9, 0.999)\n",
+        "epsilon_division_stablizer = 1e-8\n",
+        "\n",
+        "adam = Adam(resnet_corolectal_cancer_model.parameters(),\n",
+        "            lr=learning_rate,\n",
+        "            weight_decay=l2_regularizer,\n",
+        "            betas=adam_betas,\n",
+        "            eps=epsilon_division_stablizer,\n",
+        "            differentiable=True)\n",
+        "\n",
+        "'''\n",
+        "Hyperparameters for RSMProp recommended settings: learning rate = 0.001\n",
+        "                                                  L2 regularizer penalty = 1e-6\n",
+        "                                                  Batch Size = 100\n",
+        "                                                  Decay rate = 0.999\n",
+        "                                                  Division stablizer = 1e-8\n",
+        "'''\n",
+        "rmsprop_decay_rate = adam_betas[1]\n",
+        "\n",
+        "rmsprop = RMSprop(resnet_corolectal_cancer_model.parameters(),\n",
+        "                  lr=learning_rate,\n",
+        "                  weight_decay=l2_regularizer,\n",
+        "                  alpha=rmsprop_decay_rate,\n",
+        "                  eps=epsilon_division_stablizer,\n",
+        "                  differentiable=True)\n",
+        "\n",
+        "# [Task 1]: Import and initialize the t-SNE visualization algorithm\n",
+        "tsne = TSNE(random_state=42)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "pyHyejrE4p2Z"
+      },
+      "outputs": [],
+      "source": [
+        "'''Optimizers'''\n",
+        "\n",
+        "# optimizer = rmspro\n",
+        "# optimizer = SGD(resnet_corolectal_cancer_model.parameters(), lr=learning_rate, weight_decay=l2_regularizer)\n",
+        "# optimizer = Adam(resnet_corolectal_cancer_model.parameters(), lr=learning_rate, weight_decay=l2_regularizer)\n",
+        "optimizer = RMSprop(resnet_corolectal_cancer_model.parameters(), lr=learning_rate, weight_decay=l2_regularizer)\n",
+        "\n",
+        "# Preprocessing transformations\n",
+        "transform = transforms.Compose([\n",
+        "    transforms.Resize((224, 224)),  # ResNet\n",
+        "    transforms.RandomHorizontalFlip(),  # Data augmentation\n",
+        "    transforms.ToTensor(),  # TensorFlow\n",
+        "    transforms.Normalize([0.485, 0.456, 0.406], [0.229, 0.224, 0.225])  # ImageNet Normalization\n",
+        "])\n",
+        "\n",
+        "full_dataset = datasets.ImageFolder(root='Colorectal Cancer', transform=transform)\n",
+        "\n",
+        "# Split 80:20, train/test\n",
+        "train_size = int(0.8 * len(full_dataset))  \n",
+        "test_size = len(full_dataset) - train_size  \n",
+        "train_dataset, test_dataset = random_split(full_dataset, [train_size, test_size])\n",
+        "\n",
+        "# Dataloaders for each type\n",
+        "train_dataloader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
+        "test_dataloader = DataLoader(test_dataset, batch_size=batch_size, shuffle=False)\n",
+        "\n",
+        "\n",
+        "num_epochs = 1 \n",
+        "\n",
+        "for epoch in range(num_epochs):  # Iterate over epochs\n",
+        "    resnet_corolectal_cancer_model.train()  # Set model to training mode\n",
+        "    epoch_loss = 0.0  # Track loss for the epoch\n",
+        "\n",
+        "    for inputs, labels in train_dataloader:\n",
+        "        inputs, labels = inputs.to(device), labels.to(device) \n",
+        "\n",
+        "        optimizer.zero_grad()  # Zero the gradients\n",
+        "        \n",
+        "        outputs = resnet_corolectal_cancer_model(inputs)  # Forward pass\n",
+        "        \n",
+        "        loss = nn.CrossEntropyLoss()(outputs, labels)  # Calculate loss\n",
+        "        \n",
+        "        loss.backward()  # Backward pass to compute gradients\n",
+        "        optimizer.step()  # Update model parameters using gradients\n",
+        "\n",
+        "        epoch_loss += loss.item()  \n",
+        "\n",
+        "    print(f\"Epoch {epoch + 1}/{num_epochs}, Loss: {epoch_loss / len(train_dataloader):.4f}\")\n",
+        "\n",
+        "# Eval \n",
+        "resnet_corolectal_cancer_model.eval()  # Set model to evaluation mode\n",
+        "with torch.no_grad():  # Disable gradient tracking\n",
+        "    test_loss = 0.0 \n",
+        "    for inputs, labels in test_dataloader:\n",
+        "        inputs, labels = inputs.to(device), labels.to(device)  # Move data to GPU if available\n",
+        "        \n",
+        "        outputs = resnet_corolectal_cancer_model(inputs)  # Forward pass\n",
+        "        loss = nn.CrossEntropyLoss()(outputs, labels)  # Test loss\n",
+        "        \n",
+        "        test_loss += loss.item()  # Cumulative test loss\n",
+        "\n",
+        "    average_test_loss = test_loss / len(test_dataloader)\n",
+        "    print(f\"Test Loss: {average_test_loss:.4f}\")\n",
+        "\n"
+      ]
     }
-   ],
-   "source": [
-    "import torch\n",
-    "from torchvision.models import resnet50\n",
-    "from torch.optim import SGD, Adam, RMSprop\n",
-    "from sklearn.manifold import TSNE\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "print(f\"torch.cuda.is_available(): {torch.cuda.is_available()}\")\n",
-    "\n",
-    "torch.manual_seed(0)\n",
-    "\n",
-    "device = \"cuda:0\"\n",
-    "\n",
-    "# [Task 1]: Import and initialize ResNet50\n",
-    "resnet_corolectal_cancer_model = resnet50(weights=None)\n",
-    "'''\n",
-    "Note that by default the ResNet implementations from PyTorch's source code follow the ImaegNet fully connected layer specification of 2048x1000.\n",
-    "    Therefore, for our project, we need to change it to use 3 classes according to the first dataset (MUS, NORM, STR).\n",
-    "    See the source code for the base class here (https://github.com/pytorch/vision/blob/main/torchvision/models/resnet.py).\n",
-    "    Stack Overflow post here (https://stackoverflow.com/questions/68980724/the-number-of-classes-in-pytorch-pretrained-model).\n",
-    "\n",
-    "    Additionally, we will need to remove the last layer to be able to pass the features to a different learning algorithm in task 2.\n",
-    "    Here is a Stack Overflow post about it (https://stackoverflow.com/questions/52548174/how-to-remove-the-last-fc-layer-from-a-resnet-model-in-pytorch).\n",
-    "\n",
-    "'''\n",
-    "resnet_corolectal_cancer_model.fc = torch.nn.Linear(2048, 3)\n",
-    "resnet_corolectal_cancer_model.to(device=device)\n",
-    "resnet_corolectal_cancer_model.train()\n",
-    "\n",
-    "# [Task 1]: Import and initialize the optimizer algorithms\n",
-    "'''\n",
-    "Hyperparameters for vanilla SGD recommended settings: learning rate = 0.001\n",
-    "                                                      L2 regularizer penalty = 1e-6\n",
-    "                                                      Batch Size = 100\n",
-    "'''\n",
-    "learning_rate = 0.001\n",
-    "l2_regularizer = 1e-6\n",
-    "batch_size = 100\n",
-    "\n",
-    "sgd_no_momentum = SGD(resnet_corolectal_cancer_model.parameters(), lr=learning_rate, weight_decay=l2_regularizer, differentiable=True)\n",
-    "\n",
-    "'''\n",
-    "Hyperparameters for SGD + momentum recommended settings: learning rate = 0.001\n",
-    "                                                         L2 regularizer penalty = 1e-6\n",
-    "                                                         Batch Size = 100\n",
-    "                                                         Momentum = 0.9\n",
-    "                                                         Nesterov = true\n",
-    "'''\n",
-    "sgd_momentum = 0.9\n",
-    "sgd_momentum_use_nesterov = True\n",
-    "\n",
-    "sgd_momentum = SGD(resnet_corolectal_cancer_model.parameters(),\n",
-    "                   lr=learning_rate,\n",
-    "                   weight_decay=l2_regularizer,\n",
-    "                   momentum=sgd_momentum,\n",
-    "                   nesterov=sgd_momentum_use_nesterov,\n",
-    "                   differentiable=True)\n",
-    "\n",
-    "'''\n",
-    "Hyperparameters for Adam recommended settings: learning rate = 0.001\n",
-    "                                               L2 regularizer penalty = 1e-6\n",
-    "                                               Batch Size = 100\n",
-    "                                               Beta 1 (Momentum) = 0.9\n",
-    "                                               Beta 2 (RMS decay rate) = 0.999\n",
-    "                                               Division stablizer = 1e-8\n",
-    "'''\n",
-    "adam_betas = (0.9, 0.999)\n",
-    "epsilon_division_stablizer = 1e-8\n",
-    "\n",
-    "adam = Adam(resnet_corolectal_cancer_model.parameters(),\n",
-    "            lr=learning_rate,\n",
-    "            weight_decay=l2_regularizer,\n",
-    "            betas=adam_betas,\n",
-    "            eps=epsilon_division_stablizer,\n",
-    "            differentiable=True)\n",
-    "\n",
-    "'''\n",
-    "Hyperparameters for RSMProp recommended settings: learning rate = 0.001\n",
-    "                                                  L2 regularizer penalty = 1e-6\n",
-    "                                                  Batch Size = 100\n",
-    "                                                  Decay rate = 0.999\n",
-    "                                                  Division stablizer = 1e-8\n",
-    "'''\n",
-    "rmsprop_decay_rate = adam_betas[1]\n",
-    "\n",
-    "rmsprop = RMSprop(resnet_corolectal_cancer_model.parameters(),\n",
-    "                  lr=learning_rate,\n",
-    "                  weight_decay=l2_regularizer,\n",
-    "                  alpha=rmsprop_decay_rate,\n",
-    "                  eps=epsilon_division_stablizer,\n",
-    "                  differentiable=True)\n",
-    "\n",
-    "# [Task 1]: Import and initialize the t-SNE visualization algorithm\n",
-    "tsne = TSNE(random_state=42)"
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.9.6"
+    }
   },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.5"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
