--- a/[COMP432]_Corolectal_Cancer_Neural_Network.ipynb
+++ b/[COMP432]_Corolectal_Cancer_Neural_Network.ipynb
@@ -1,8 +1,37 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Custom Corolectal Cancer Pre-trained Model"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### This notebook contains the implementation for the first pre-trained CNN encoder outlined as the first task of the project proposal. The architecture selected is ResNet and the implementation used comes from the `torchvision` module.\n",
+        "\n",
+        "### Below are 4 different attempts at pre-training the model to find the ideal loop, optimizer and loss function that will yield the best performance for the model. The following 4 optimizers were selected.\n",
+        "- #### **SGD**\n",
+        "- #### **SGD + Momentum**\n",
+        "- #### **RMSProp**\n",
+        "- #### **Adam**\n",
+        "\n",
+        "### Each loop utilizes the Categorical cross Entropy (CCE) loss function due to the presence of 3 distinct classes in the dataset (MUS, NORM, STR)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Initializations"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -31,6 +60,8 @@
         "from torchvision import datasets, transforms\n",
         "from torch.utils.data import DataLoader, random_split\n",
         "from PIL import Image\n",
+        "import math\n",
+        "\n",
         "print(f\"torch.cuda.is_available(): {torch.cuda.is_available()}\")\n",
         "\n",
         "torch.manual_seed(0)\n",
@@ -122,8 +153,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Data Preprocessing"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 3,
       "metadata": {
         "id": "pyHyejrE4p2Z"
       },
@@ -133,7 +171,6 @@
           "output_type": "stream",
           "text": [
             "[INFO] Classes Detected: 3, CHECK\n",
-            "[2000 2000 2000] 3\n",
             "\t> MUS: 2000 samples\n",
             "\t> NORM: 2000 samples\n",
             "\t> STR: 2000 samples\n",
@@ -162,7 +199,7 @@
         "    transforms.Normalize([0.485, 0.456, 0.406], [0.229, 0.224, 0.225])  # ImageNet Normalization\n",
         "])\n",
         "\n",
-        "dataset_root = 'Datasets/Colorectal Cancer/'\n",
+        "dataset_root = 'Datasets/Corolectal Cancer/'\n",
         "if not os.path.exists(dataset_root):\n",
         "    raise FileNotFoundError(f\"Dataset directory '{dataset_root}' does not exist.\")\n",
         "\n",
@@ -210,6 +247,74 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### SGD + Momentum Optimizations"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 16,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[INFO] Starting training w/SGD + Momentum... CHECK\n",
+            "[INFO] Epoch 1/1, Loss: 1.1436, Accuracy: 33.4167\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Training loop\n",
+        "print(\"[INFO] Starting training w/SGD + Momentum... CHECK\")\n",
+        "\n",
+        "resnet_corolectal_cancer_model.train() \n",
+        "\n",
+        "sgd_momentum_losses = []\n",
+        "\n",
+        "sgd_momentum_accuracies = []\n",
+        "\n",
+        "for epoch in range(num_epochs):  \n",
+        "    total_epoch_loss = 0.0  # Track loss for the epoch\n",
+        "    \n",
+        "    total_epoch_acc = 0.0  # Track accuracy for the epoch\n",
+        "\n",
+        "    for inputs, labels in train_dataloader:\n",
+        "        inputs, labels = inputs.to(device), labels.to(device) \n",
+        "\n",
+        "        optimizer.zero_grad() \n",
+        "        \n",
+        "        outputs = resnet_corolectal_cancer_model(inputs)  # Forward pass\n",
+        "        loss = nn.CrossEntropyLoss()(outputs, labels)  # Calculate loss\n",
+        "        loss.backward()  # Backward pass to compute gradients\n",
+        "        \n",
+        "        optimizer.step()  # Update model parameters using gradients\n",
+        "\n",
+        "        total_epoch_loss += loss.item()\n",
+        "\n",
+        "        softmax_confidence_scores = torch.nn.functional.softmax(outputs, dim=1)\n",
+        "        label_prediction = torch.argmax(softmax_confidence_scores, dim=1).view(-1)\n",
+        "        total_epoch_acc += ((label_prediction == labels).sum().item() / len(labels)) * 100\n",
+        "\n",
+        "    num_batches = len(train_dataloader)\n",
+        "    sgd_momentum_losses.append(total_epoch_loss / num_batches)\n",
+        "\n",
+        "    sgd_momentum_accuracies.append(total_epoch_acc / num_batches)\n",
+        "\n",
+        "    print(f\"[INFO] Epoch {epoch + 1}/{num_epochs}, Loss: {sgd_momentum_losses[epoch]:.4f}, Accuracy: {sgd_momentum_accuracies[epoch]:.4f}%\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### RMSProp Optimizations"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
@@ -219,7 +324,7 @@
         "print(\"[INFO] Starting training... CHECK\")\n",
         "for epoch in range(num_epochs):  \n",
         "    resnet_corolectal_cancer_model.train() \n",
-        "    epoch_loss = 0.0  # Track loss for the epoch\n",
+        "    total_epoch_loss = 0.0  # Track loss for the epoch\n",
         "\n",
         "    for inputs, labels in train_dataloader:\n",
         "        inputs, labels = inputs.to(device), labels.to(device) \n",
@@ -233,9 +338,9 @@
         "        loss.backward()  # Backward pass to compute gradients\n",
         "        optimizer.step()  # Update model parameters using gradients\n",
         "\n",
-        "        epoch_loss += loss.item()  \n",
+        "        total_epoch_loss += loss.item()  \n",
         "\n",
-        "    print(f\"[INFO] Epoch {epoch + 1}/{num_epochs}, Loss: {epoch_loss / len(train_dataloader):.4f}\")\n",
+        "    print(f\"[INFO] Epoch {epoch + 1}/{num_epochs}, Loss: {total_epoch_loss / len(train_dataloader):.4f}\")\n",
         "\n",
         "# Evaluation\n",
         "print(\"[INFO] Starting evaluation... CHECK\")\n",
@@ -274,7 +379,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.5"
+      "version": "3.11.5"
     }
   },
   "nbformat": 4,
