Fix[PCOMP432-T-1-SGD-Momentum]: Fix optimizer typo

--- a/[COMP432]_Corolectal_Cancer_Neural_Network.ipynb
+++ b/[COMP432]_Corolectal_Cancer_Neural_Network.ipynb
@@ -31,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 19,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -95,7 +95,7 @@
         "batch_size = 32\n",
         "num_epochs = 1 \n",
         "\n",
-        "sgd_no_momentum = SGD(resnet_corolectal_cancer_model.parameters(), lr=learning_rate, weight_decay=l2_regularizer, differentiable=True)\n",
+        "sgd_no_momentum = SGD(resnet_corolectal_cancer_model.parameters(), lr=learning_rate, weight_decay=l2_regularizer)\n",
         "\n",
         "'''\n",
         "Hyperparameters for SGD + momentum recommended settings: learning rate = 0.001\n",
@@ -111,8 +111,7 @@
         "                   lr=learning_rate,\n",
         "                   weight_decay=l2_regularizer,\n",
         "                   momentum=sgd_momentum,\n",
-        "                   nesterov=sgd_momentum_use_nesterov,\n",
-        "                   differentiable=True)\n",
+        "                   nesterov=sgd_momentum_use_nesterov)\n",
         "\n",
         "'''\n",
         "Hyperparameters for Adam recommended settings: learning rate = 0.001\n",
@@ -129,8 +128,7 @@
         "            lr=learning_rate,\n",
         "            weight_decay=l2_regularizer,\n",
         "            betas=adam_betas,\n",
-        "            eps=epsilon_division_stablizer,\n",
-        "            differentiable=True)\n",
+        "            eps=epsilon_division_stablizer)\n",
         "\n",
         "'''\n",
         "Hyperparameters for RSMProp recommended settings: learning rate = 0.001\n",
@@ -145,8 +143,7 @@
         "                  lr=learning_rate,\n",
         "                  weight_decay=l2_regularizer,\n",
         "                  alpha=rmsprop_decay_rate,\n",
-        "                  eps=epsilon_division_stablizer,\n",
-        "                  differentiable=True)\n",
+        "                  eps=epsilon_division_stablizer)\n",
         "\n",
         "# [Task 1]: Import and initialize the t-SNE visualization algorithm\n",
         "tsne = TSNE(random_state=42)"
@@ -255,7 +252,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 20,
       "metadata": {},
       "outputs": [
         {
@@ -263,7 +260,7 @@
           "output_type": "stream",
           "text": [
             "[INFO] Starting training w/SGD + Momentum... CHECK\n",
-            "[INFO] Epoch 1/1, Loss: 1.1436, Accuracy: 33.4167\n"
+            "[INFO] Epoch 1/1, Loss: 0.8989, Accuracy: 52.5208%\n"
           ]
         }
       ],
@@ -285,13 +282,13 @@
         "    for inputs, labels in train_dataloader:\n",
         "        inputs, labels = inputs.to(device), labels.to(device) \n",
         "\n",
-        "        optimizer.zero_grad() \n",
+        "        sgd_momentum.zero_grad() \n",
         "        \n",
         "        outputs = resnet_corolectal_cancer_model(inputs)  # Forward pass\n",
         "        loss = nn.CrossEntropyLoss()(outputs, labels)  # Calculate loss\n",
         "        loss.backward()  # Backward pass to compute gradients\n",
         "        \n",
-        "        optimizer.step()  # Update model parameters using gradients\n",
+        "        sgd_momentum.step()  # Update model parameters using gradients\n",
         "\n",
         "        total_epoch_loss += loss.item()\n",
         "\n",
