Chore[PCOMP432-T-1-Momentum]: Data viz changes

--- a/[COMP432]_Corolectal_Cancer_Neural_Network.ipynb
+++ b/[COMP432]_Corolectal_Cancer_Neural_Network.ipynb
@@ -288,7 +288,9 @@
         "\n",
         "momentum_accuracies = []\n",
         "\n",
-        "fig, (momentum_loss_ax, momentum_acc_ax) = plt.subplots(1, 2, figsize=(15, 8))\n",
+        "plt.style.use('seaborn-v0_8-dark')\n",
+        "\n",
+        "fig, (momentum_loss_ax, momentum_acc_ax) = plt.subplots(1, 2, figsize=(16,6))\n",
         "\n",
         "num_batches = len(train_dataloader)\n",
         "\n",
@@ -320,15 +322,18 @@
         "\n",
         "    print(f\"[INFO] Epoch {epoch + 1}/{num_epochs}, Loss: {momentum_losses[epoch]:.4f}, Accuracy: {momentum_accuracies[epoch]:.4f}%\")\n",
         "\n",
-        "momentum_loss_ax.plot(np.arange(len(momentum_losses)), momentum_losses)\n",
+        "momentum_loss_ax.plot(np.arange(1, len(momentum_losses) + 1), momentum_losses)\n",
         "momentum_loss_ax.set_xlabel(f\"Epoch (Minibatch size = {num_batches}, Batch size = {batch_size})\")\n",
+        "momentum_loss_ax.set_xticks(np.arange(1, len(momentum_losses) + 1))\n",
         "momentum_loss_ax.set_ylabel(\"CCE loss\")\n",
         "momentum_loss_ax.set_title(\"Training Epoch vs. Loss for Corolectal Cancer Set (SGD + Momentum)\")\n",
         "momentum_loss_ax.grid()\n",
         "\n",
-        "momentum_acc_ax.plot(np.arange(len(momentum_accuracies)), momentum_accuracies)\n",
+        "momentum_acc_ax.plot(np.arange(1, len(momentum_accuracies) + 1), momentum_accuracies)\n",
         "momentum_acc_ax.set_xlabel(f\"Epoch (Minibatch size = {num_batches}, Batch size = {batch_size})\")\n",
+        "momentum_acc_ax.set_xticks(np.arange(1, len(momentum_accuracies) + 1))\n",
         "momentum_acc_ax.set_ylabel(\"Accuracy (%)\")\n",
+        "momentum_acc_ax.set_yticks(np.arange(0, 110, 10))\n",
         "momentum_acc_ax.set_title(\"Training Epoch vs. Accuracy for Corolectal Cancer Set (SGD + Momentum)\")\n",
         "momentum_acc_ax.grid()\n",
         "\n",
