Task[PCOMP432-T-1-Momentum]: Hyper parameter tuning attempt

--- a/[COMP432]_Corolectal_Cancer_Neural_Network.ipynb
+++ b/[COMP432]_Corolectal_Cancer_Neural_Network.ipynb
@@ -31,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -40,6 +40,16 @@
         "outputId": "07bbc2ee-d7a7-4e06-90d0-c9d11d4beee2"
       },
       "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "c:\\Users\\trist\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+            "  from .autonotebook import tqdm as notebook_tqdm\n",
+            "2024-10-16 17:49:47,788\tINFO util.py:154 -- Missing packages: ['ipywidgets']. Run `pip install -U ipywidgets`, then restart the notebook server for rich notebook output.\n",
+            "2024-10-16 17:49:49,797\tINFO util.py:154 -- Missing packages: ['ipywidgets']. Run `pip install -U ipywidgets`, then restart the notebook server for rich notebook output.\n"
+          ]
+        },
         {
           "name": "stdout",
           "output_type": "stream",
@@ -167,7 +177,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -264,8 +274,9 @@
         "    return train_dataset, test_dataset\n",
         "\n",
         "\n",
-        "def tune_model(_config, _data_dir=\"Datasets/Corolectal Cancer/\", _optimizer_choice=optimizer_choice.SGD.value):\n",
+        "def tune_model(config, _data_dir=\"Datasets/Corolectal Cancer/\", _optimizer_choice=optimizer_choice.SGD.value):\n",
         "    resnet = resnet50(weights=None)\n",
+        "    resnet.fc = nn.Linear(2048, 3)\n",
         "\n",
         "    device = \"cpu\"\n",
         "    if torch.cuda.is_available():\n",
@@ -275,15 +286,17 @@
         "    resnet.to(device)\n",
         "\n",
         "    criterion = nn.CrossEntropyLoss()\n",
+        "\n",
         "    optimizer = None\n",
+        "\n",
         "    if _optimizer_choice == optimizer_choice.SGD.value:\n",
-        "        optimizer = optim.SGD(resnet.parameters(), lr=_config[\"lr\"], weight_decay=_config[\"l2\"])\n",
+        "        optimizer = optim.SGD(resnet.parameters(), lr=config[\"lr\"], weight_decay=config[\"l2\"])\n",
         "    elif _optimizer_choice == optimizer_choice.MOMENTUM.value:\n",
-        "        optimizer = optim.SGD(resnet.parameters(), lr=_config[\"lr\"], weight_decay=_config[\"l2\"], momentum=_config[\"momentum\"], nesterov=_config[\"nesterov\"])\n",
+        "        optimizer = optim.SGD(resnet.parameters(), lr=config[\"lr\"], weight_decay=config[\"l2\"], momentum=config[\"momentum\"], nesterov=config[\"nesterov\"])\n",
         "    elif _optimizer_choice == optimizer_choice.RMSPROP.value:\n",
-        "        optimizer = optim.RMSprop(resnet.parameters(), lr=_config[\"lr\"], weight_decay=_config[\"l2\"], alpha=_config[\"betas\"][1], eps=_config[\"eps\"])\n",
+        "        optimizer = optim.RMSprop(resnet.parameters(), lr=config[\"lr\"], weight_decay=config[\"l2\"], alpha=config[\"betas\"][1], eps=config[\"eps\"])\n",
         "    else:\n",
-        "        optimizer = optim.Adam(resnet.parameters(), lr=_config[\"lr\"], weight_decay=_config[\"l2\"], betas=_config[\"betas\"], eps=_config[\"eps\"])\n",
+        "        optimizer = optim.Adam(resnet.parameters(), lr=config[\"lr\"], weight_decay=config[\"l2\"], betas=config[\"betas\"], eps=config[\"eps\"])\n",
         "\n",
         "    checkpoint = get_checkpoint()\n",
         "    if checkpoint:\n",
@@ -291,8 +304,11 @@
         "            data_path = Path(checkpoint_dir) / \"data.pkl\"\n",
         "            with open(data_path, \"rb\") as fp:\n",
         "                checkpoint_state = pickle.load(fp)\n",
+        "\n",
         "            start_epoch = checkpoint_state[\"epoch\"]\n",
+        "\n",
         "            resnet.load_state_dict(checkpoint_state[\"net_state_dict\"])\n",
+        "\n",
         "            optimizer.load_state_dict(checkpoint_state[\"optimizer_state_dict\"])\n",
         "    else:\n",
         "        start_epoch = 0\n",
@@ -302,13 +318,14 @@
         "    test_abs = int(len(trainset) * 0.8)\n",
         "    train_subset, val_subset = random_split(trainset, [test_abs, len(trainset) - test_abs])\n",
         "\n",
-        "    trainloader = torch.utils.data.DataLoader(train_subset, batch_size=int(_config[\"batch_size\"]), shuffle=True, num_workers=8)\n",
-        "    valloader = torch.utils.data.DataLoader(val_subset, batch_size=int(_config[\"batch_size\"]), shuffle=True, num_workers=8)\n",
+        "    trainloader = torch.utils.data.DataLoader(train_subset, batch_size=int(config[\"batch_size\"]), shuffle=True, num_workers=8)\n",
+        "    valloader = torch.utils.data.DataLoader(val_subset, batch_size=int(config[\"batch_size\"]), shuffle=True, num_workers=8)\n",
         "\n",
         "    for epoch in range(start_epoch, 10):  # loop over the dataset multiple times\n",
         "        running_loss = 0.0\n",
         "\n",
         "        epoch_steps = 0\n",
+        "\n",
         "        for i, data in enumerate(trainloader, 0):\n",
         "            # get the inputs; data is a list of [inputs, labels]\n",
         "            inputs, labels = data\n",
@@ -372,7 +389,7 @@
         "                pickle.dump(checkpoint_data, fp)\n",
         "\n",
         "            checkpoint = Checkpoint.from_directory(checkpoint_dir)\n",
-        "            train.report({\"loss\": val_loss / val_steps, \"accuracy\": correct / total}, checkpoint=checkpoint,)\n",
+        "            train.report({\"loss\": val_loss / val_steps, \"accuracy\": correct / total}, checkpoint=checkpoint)\n",
         "\n",
         "    print(\"Finished Training\")\n",
         "\n",
@@ -407,6 +424,7 @@
         "        \"lr\": tune.loguniform(1e-4, 1e-1),\n",
         "        \"l2\": tune.choice([2**i for i in range(9)]),\n",
         "        \"momentum\": tune.choice([0.9, 0.8, 0.7, 0.6]),\n",
+        "        \"nesterov\": tune.choice([True, False]),\n",
         "        \"betas\": tune.choice([(0.9, 0.999), (0.8, 0.888), (0.7, 0.777)]),\n",
         "        \"eps\": tune.loguniform(1e-8, 1e-6),\n",
         "    }\n",
@@ -641,11 +659,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Hyperparameter tuning"
+        "# Hyperparameter tuning\n",
+        "'''\n",
+        "BROKEN DUE TO LONG DIRECTORY NAMES FOR TRIALS\n",
+        "\n",
+        "Will need to create a callable function to create trial names and directories.\n",
+        "\n",
+        "Some useful resources: https://docs.ray.io/en/latest/tune/api/doc/ray.tune.run.html#ray.tune.run\n",
+        "                        https://docs.python.org/3/library/typing.html#annotating-callables\n",
+        "                        https://docs.ray.io/en/latest/tune/api/internals.html#ray.tune.experiment.trial.Trial\n",
+        "\n",
+        "'''\n",
+        "# start_model_tuning(1, 1, 1, optimizer_choice.MOMENTUM.value)"
       ]
     },
     {
