Task[PCOMP432-T-1]: Include best trial track

--- a/[COMP432]_Corolectal_Cancer_Neural_Network.ipynb
+++ b/[COMP432]_Corolectal_Cancer_Neural_Network.ipynb
@@ -66,23 +66,11 @@
         "import torch.nn.functional as F\n",
         "import torch.optim as optim\n",
         "import matplotlib.pyplot as plt\n",
-        "import math\n",
-        "import tempfile\n",
-        "import ray.cloudpickle as pickle\n",
         "from torch.utils.data import DataLoader, random_split\n",
         "from torchvision import datasets, transforms\n",
         "from torchvision.models import resnet50\n",
         "from sklearn.manifold import TSNE\n",
-        "from PIL import Image\n",
-        "from functools import partial\n",
-        "from pathlib import Path\n",
-        "from ray import tune\n",
-        "from ray import train\n",
-        "from ray.tune.experiment import Trial\n",
-        "from ray.train import Checkpoint, get_checkpoint\n",
-        "from ray.tune.schedulers import ASHAScheduler\n",
         "from enum import Enum\n",
-        "from collections.abc import Callable\n",
         "\n",
         "class optimizer_choice(Enum):\n",
         "    SGD = 0\n",
@@ -244,7 +232,7 @@
         "\n",
         "        epoch_accuracies.append(total_epoch_acc / num_batches)\n",
         "\n",
-        "        print(f\"[INFO] Epoch {epoch + 1}/{num_epochs}, Loss: {epoch_losses[epoch]:.4f}, Accuracy: {epoch_accuracies[epoch]:.4f}%\")\n",
+        "        print(f\"[INFO] Epoch {epoch + 1}/{_num_epochs}, Loss: {epoch_losses[epoch]:.4f}, Accuracy: {epoch_accuracies[epoch]:.4f}%\")\n",
         "\n",
         "    if _show_plot:\n",
         "        plot_model_result(epoch_losses, epoch_accuracies, num_batches, \"Training\" if _is_training else \"Validation\" if _is_validation else \"Test\", _dataset_name)\n",
@@ -561,6 +549,16 @@
         "learning_rates = [0.001, 0.025, 0.05]\n",
         "batch_sizes = [2**i for i in range(3, 6)]\n",
         "\n",
+        "best_learning_rate = 0.0\n",
+        "\n",
+        "best_batch_size = 0\n",
+        "\n",
+        "best_val_loss = -1.0\n",
+        "\n",
+        "best_model = None\n",
+        "\n",
+        "prev_val_loss = -1.0\n",
+        "\n",
         "for lr in learning_rates:\n",
         "    for bs in batch_sizes:\n",
         "        trainset, testset = load_data()\n",
@@ -570,7 +568,7 @@
         "        trainloader = torch.utils.data.DataLoader(train_subset, batch_size=bs, shuffle=True)\n",
         "        valloader = torch.utils.data.DataLoader(val_subset, batch_size=bs, shuffle=True)\n",
         "\n",
-        "        print(f\"[INFO]: Beginning train trial config lr: {lr}, bs: {bs}\\n\")\n",
+        "        print(f\"\\n[INFO]: Beginning validation trial config lr: {lr}, bs: {bs}\")\n",
         "\n",
         "        resnet_corolectal_cancer_model = resnet50(weights=None)\n",
         "        resnet_corolectal_cancer_model.fc = nn.Linear(2048, 3)\n",
@@ -581,16 +579,24 @@
         "                                    weight_decay=l2_regularizer,\n",
         "                                    momentum=momentum_term,\n",
         "                                    nesterov=sgd_momentum_use_nesterov)\n",
+        "        \n",
+        "        for epoch in range(num_epochs):\n",
+        "            do_model_epoch_loop(resnet_corolectal_cancer_model, trainloader, 1, momentum, _show_plot=False, _device=device)\n",
         "\n",
-        "        do_model_epoch_loop(resnet_corolectal_cancer_model, trainloader, num_epochs, momentum, _device=device)\n",
+        "            val_losses, val_accuracies = do_model_epoch_loop(resnet_corolectal_cancer_model, valloader, 1, momentum, _is_training=False, _is_validation=True, _show_plot=False, _device=device)\n",
+        "            if prev_val_loss >= 0.0 and val_losses[0] > prev_val_loss:\n",
+        "                break\n",
+        "            \n",
+        "            prev_val_loss = val_losses[0]\n",
+        "        \n",
+        "        print(f\"\\n[INFO]: Finished validation trial config lr: {lr}, bs: {bs}, loss = {val_losses[0]:.4f}, accuracy = {val_accuracies[0]}\\n\")\n",
         "\n",
-        "        print(f\"\\n[INFO]: Finished train trial config lr: {lr}, bs: {bs}, check above graph\")\n",
+        "        if best_val_loss < 0.0 or prev_val_loss < best_val_loss:\n",
+        "                    best_learning_rate = lr\n",
         "\n",
-        "        print(f\"\\n[INFO]: Beginning validation trial config lr: {lr}, bs: {bs}\")\n",
+        "                    best_batch_size = bs\n",
         "\n",
-        "        val_losses, val_accuracies = do_model_epoch_loop(resnet_corolectal_cancer_model, valloader, 1, momentum, _is_training=False, _is_validation=True, _show_plot=False, _device=device)\n",
-        "\n",
-        "        print(f\"\\n[INFO]: Finished validation trial config lr: {lr}, bs: {bs}, loss = {val_losses[0]:.4f}, accuracy = {val_accuracies[0]}\\n\")\n"
+        "                    best_model = resnet_corolectal_cancer_model"
       ]
     },
     {
