Chore[PCOMP432]: Update markdown

--- a/[COMP432]_Animal_Faces_Transfer_Learning.ipynb
+++ b/[COMP432]_Animal_Faces_Transfer_Learning.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## This notebook contains the code to carry out the analysis of the transfer learning capacilities of the pre-trained model from task 1 and the ImageNet pre-trained model.\n",
+    "### This notebook contains the code to carry out the analysis of the transfer learning capacilities of the pre-trained model from task 1 and the ImageNet pre-trained model.\n",
     "### First, the pre-trained model from task 1 will be loaded to get the CNN encoder to extract features to be passed along to a Logistic Regression model for classification. An analysis of the performance of the classifier will be made with respect to the features extracted.\n",
     "### Then the same procedure will be done but for a ResNet model with ImageNet pre-trained weights."
    ]
