Chore[PCOMP432-T-2-ID3]: Move global vars

--- a/[COMP432]_Animal_Faces_Transfer_Learning.ipynb
+++ b/[COMP432]_Animal_Faces_Transfer_Learning.ipynb
@@ -39,6 +39,12 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.manifold import TSNE\n",
     "\n",
+    "device = \"cuda:0\"\n",
+    "\n",
+    "logistic_regression_classifier = LogisticRegression(random_state=42)\n",
+    "\n",
+    "label_names = [\"Cat\", \"Dog\", \"Wild\"]\n",
+    "\n",
     "def load_data(_data_dir=\"Datasets/Corolectal Cancer/\"):\n",
     "    transform = transforms.Compose([\n",
     "        transforms.Resize((224, 224)),  # ResNet\n",
@@ -147,14 +153,7 @@
     "\n",
     "    ax.legend()\n",
     "\n",
-    "    plt.show()\n",
-    "\n",
-    "\n",
-    "device = \"cuda:0\"\n",
-    "\n",
-    "logistic_regression_classifier = LogisticRegression(random_state=42)\n",
-    "\n",
-    "label_names = [\"Cat\", \"Dog\", \"Wild\"]\n"
+    "    plt.show()\n"
    ]
   },
   {
